[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/enemies/linear_atk_enemy/enemyRed5.png" type="Texture" id=1]
[ext_resource path="res://Inimigos/Inimigo_linear/Inimigo_linear.gd" type="Script" id=2]

[node name="Inimigo_Linear" type="Area2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Move_Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.25

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8.16541, 29.7673, -19.7773, 21.7139, -34.3858, -29.4158, 34.1618, -29.4158, 19.7406, 22.8377, 7.19225, 29.3927 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -14.8651, 28.541 )

[node name="RightGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 15.4597, 28.541 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
